traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:16: error: reassignment to val
    y=y+1
     ^TraversalZigZag:26: error: reassignment to val
    y=y+1
     ^